# viking

./: .env.example  .gitignore  README.md  pyproject.toml
prompts/: default.md
scripts/: inspect_har.py
src/viking/: __init__.py  cli.py  config.py
src/viking/ai/: __init__.py  schema.py  selector.py
src/viking/api/: __init__.py  client.py  models.py
tests/: test_selector.py
tests/fixtures/: menu_sample.json
